--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,10 +28,10 @@
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -43,7 +43,7 @@
     <!-- Navbar -->
 
     <!-- Background image -->
-    <div class="p-5 text-center bg-image" style="
+    <!-- <div class="p-5 text-center bg-image" style="
         background-image: url('https://mdbootstrap.com/img/new/slides/041.webp'); height: 483px;">
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
             <div class="d-flex justify-content-center align-items-center h-100">
@@ -55,6 +55,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Background image -->
 </header>
