--- a/src/app/practice/for-loop/for-loop.component.html
+++ b/src/app/practice/for-loop/for-loop.component.html
@@ -5,3 +5,6 @@
         <li>{{sub}}</li>
     </ul>
 </ul>
+
+<p [style.color]="color" [style.backgroundColor]="bgColor">Dynamic Style Binding</p>
+<button (click)="updateColor()">Update Color</button>
