Custom Directives and Basic Routing

--- a/src/app/practice/pipes/pipes.component.html
+++ b/src/app/practice/pipes/pipes.component.html
@@ -26,6 +26,11 @@
             <p>Currency pipe: {{200 | currency:  'INR'}}</p>
             <p>Custom pipe: {{20 | usdInr : 30}}</p>
         </div>
+        <br>
+        <div class="col-md-12">
+            <h3 class="mb-3">Angular Directives!</h3>
+            <p appRedEle >Directive </p>
+        </div>
     </div>
 </div>
 
