--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,21 +21,21 @@
                 <i class="fas fa-bars"></i>
             </button> -->
             <!-- <div mdbCollapse #backgroundImageExample="mdbCollapse" class="collapse navbar-collapse" -->
-            <div class="collapse navbar-collapse"
-                id="backgroundImageExample">
+            <div class="collapse navbar-collapse" id="backgroundImageExample">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" routerLink="">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" routerLink="forms">Forms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" routerLink="pipes">Pipes</a>
                     </li>
+                    <router-outlet></router-outlet>
                 </ul>
             </div>
         </div>
