--- a/src/app/practice/pipes/pipes.component.html
+++ b/src/app/practice/pipes/pipes.component.html
@@ -31,6 +31,11 @@
             <h3 class="mb-3">Angular Directives!</h3>
             <p appRedEle >Directive </p>
         </div>
+        <div class="col-md-12">
+            <h3 class="mb-3">Child Component!</h3>
+            <a routerLink="loop">Loop</a><br>
+            <a routerLink="parent">Parent Component</a>
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
-
